language/move-lang/tests/move_check/locals/eliminate_temps.exp
error[E07002]: mutable ownership violated
  ┌─ tests/move_check/locals/eliminate_temps.move:7:47
  │
7 │         let (boom, u): (&u64, u64) = (&mut x, x);
  │                                       ------  ^ Invalid copy of local 'x'
  │                                       │        
  │                                       It is still being mutably borrowed by this reference

error[E07002]: mutable ownership violated
   ┌─ tests/move_check/locals/eliminate_temps.move:14:39
   │
14 │         let (f, u): (&u64, u64) = (r, *r);
   │                                    -  ^^ Invalid dereference.
   │                                    │   
   │                                    It is still being mutably borrowed by this reference

error[E07001]: referential transparency violated
   ┌─ tests/move_check/locals/eliminate_temps.move:20:46
   │
20 │         let (f, u): (&u64, u64) = (&mut s.f, s.f);
   │                                    --------  ^^^ Invalid immutable borrow at field 'f'.
   │                                    │          
   │                                    Field 'f' is still being mutably borrowed by this reference

error[E07001]: referential transparency violated
   ┌─ tests/move_check/locals/eliminate_temps.move:27:58
   │
27 │         let (f, u): (&R, &R) = (borrow_global_mut<R>(a), borrow_global<R>(a));
   │                                 -----------------------  ^^^^^^^^^^^^^^^^^^^ Invalid borrowing of resource 'R'
   │                                 │                         
   │                                 It is still being mutably borrowed by this reference

